# JRIntegration

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPhobos.cmake  FindPhobos_backup.cmake
examples/JRTestData/: rectifyimages.param  triangulate.param
examples/JRTestData/JR_configs/: match.param  match2.param
examples/JRTestData/calibration_files/: multi_full.xml  withcalibration.xml
examples/JRTestData/original_images/: Thumbs.db
examples/JRTestData/parameter_configs/: disparity_JR.cfg
examples/deimos/JR_configs/: JR_matchingparam_with_interpolation_WITH_SUBPIX_OPTIMIZED_SLOWER_MEMORY.CFG  JR_matchingparam_with_interpolation_WITH_SUBPIX_adjusted_filenames.cfg  match_test.param  multigpusgm_param_test.ini
examples/deimos/calibration/: deimos_right.yaml
examples/deimos/calibration/cal1/: deimos_left.yaml
examples/deimos/calibration/cal2/: left_calibration.xml  right_calibration.xml  stereo_calibration.xml
examples/deimos/parameter_configs/: disparity_BM.cfg  disparity_JR.cfg  disparity_SGBM.cfg
examples/phobos/JR_configs/: JR_matchingparam_adjusted.cfg  JR_matchingparam_with_interpolation.cfg  JR_matchingparam_with_interpolation_WITH_SUBPIX.cfg  JR_matchingparam_with_interpolation_WITH_SUBPIX_adjusted_filenames.cfg  JR_matchingparam_without_interpolation.cfg  missing params
examples/phobos/calibration/: phobos_nuclear_left.yaml  phobos_nuclear_right.yaml
examples/phobos/parameter_configs/: disparity_BM.cfg  disparity_JR.cfg
include/: iniReader.h  matcherJrsgm.h
src/: iniReader.cpp  matcherJrsgm.cpp  test_JR.cpp
